--- a/src/Web/PanacheSoftware.UI.Core/package.json
+++ b/src/Web/PanacheSoftware.UI.Core/package.json
@@ -18,17 +18,17 @@
     "bootstrap": "^4.4.1",
     "bootstrap-datepicker": "^1.9.0",
     "bootswatch": "^4.4.1",
+    "chart.js": "^2.9.3",
+    "d3": "^5.15.0",
     "datatables.net": "^1.10.20",
     "datatables.net-bs": "^1.10.20",
     "datatables.net-bs4": "^1.10.20",
     "datatables.net-responsive-bs4": "^2.2.3",
-    "jquery": "^3.4.1",
+    "dhtmlx-gantt": "^7.0.0",
+    "jquery": "^3.5.1",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "orgchart": "^2.1.9",
-    "popper.js": "^1.16.0",
-    "d3": "^5.15.0",
-    "chart.js": "^2.9.3",
-    "dhtmlx-gantt": "^7.0.0"
+    "popper.js": "^1.16.0"
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
