--- a/src/API Gateway/PanacheSoftware.API.Gateway/Properties/launchSettings.json
+++ b/src/API Gateway/PanacheSoftware.API.Gateway/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://localhost:44346",
-      "sslPort": 44346
+      "applicationUrl": "http://localhost:55003",
+      "sslPort": 44303
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -23,7 +23,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:44346"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
