--- a/src/Services/PanacheSoftware.Service.File/Properties/launchSettings.json
+++ b/src/Services/PanacheSoftware.Service.File/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://localhost:44324",
-      "sslPort": 44324
+      "applicationUrl": "http://localhost:55008",
+      "sslPort": 44308
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -23,7 +23,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:44324"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
