--- a/src/Web Apps/PanacheSoftware.UI.Client/Properties/launchSettings.json
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
+    "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://localhost:44380",
-      "sslPort": 44380
+      "applicationUrl": "http://localhost:55001",
+      "sslPort": 44301
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "PanacheSoftware.UI.Client": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:44380;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
