Solution now configured to run via docker.  This will currently only work via http as certificates are not loaded into docker images.
API Gateway is currently not configured for use via Docker.

Dockerfiles include commands to install and configure the Linux environments to use en_GB locale settings.

SQL Server docker image is used for database hosting.

--- a/src/Services/PanacheSoftware.Service.Client/PanacheSoftware.Service.Client.csproj
+++ b/src/Services/PanacheSoftware.Service.Client/PanacheSoftware.Service.Client.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>168db43f-0912-4103-bcad-fafc3adebba7</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -18,6 +22,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
   </ItemGroup>
 
