XML Documentation temporarily disabled due to issue in published docker images, this will remove the swagger UI documentation for the moment.
UI Core static files moved to wwwroot folder and Identity and UI client pages adjusted to read files from correct location.

Docker publishing completed.

--- a/src/API Gateway/PanacheSoftware.API.Gateway/appsettings.json
+++ b/src/API Gateway/PanacheSoftware.API.Gateway/appsettings.json
@@ -10,7 +10,7 @@
   "PanacheSoftware": {
     "CallMethod": {
       "APICallsSecure": "false",
-      "UICallsSecure": "true",
+      "UICallsSecure": "false",
       "UseAPIGateway": "false"
     },
     "Url": {
