--- a/src/Services/PanacheSoftware.Service.Client/appsettings.json
+++ b/src/Services/PanacheSoftware.Service.Client/appsettings.json
@@ -14,7 +14,7 @@
   "PanacheSoftware": {
     "CallMethod": {
       "APICallsSecure": "false",
-      "UICallsSecure": "true",
+      "UICallsSecure": "false",
       "UseAPIGateway": "false"
     },
     "Url": {
