--- a/src/Services/PanacheSoftware.Service.Foundation/PanacheSoftware.Service.Foundation.csproj
+++ b/src/Services/PanacheSoftware.Service.Foundation/PanacheSoftware.Service.Foundation.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>PanacheSoftware.Service.Foundation.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
