--- a/src/Services/PanacheSoftware.Service.File/PanacheSoftware.Service.File.csproj
+++ b/src/Services/PanacheSoftware.Service.File/PanacheSoftware.Service.File.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>PanacheSoftware.Service.File.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
