--- a/src/Web Apps/PanacheSoftware.Identity/appsettings.json
+++ b/src/Web Apps/PanacheSoftware.Identity/appsettings.json
@@ -14,7 +14,7 @@
   "PanacheSoftware": {
     "CallMethod": {
       "APICallsSecure": "false",
-      "UICallsSecure": "true",
+      "UICallsSecure": "false",
       "UseAPIGateway": "false"
     },
     "Url": {
