--- a/src/Web Apps/PanacheSoftware.UI.Client/appsettings.json
+++ b/src/Web Apps/PanacheSoftware.UI.Client/appsettings.json
@@ -10,7 +10,7 @@
   "PanacheSoftware": {
     "CallMethod": {
       "APICallsSecure": "false",
-      "UICallsSecure": "true",
+      "UICallsSecure": "false",
       "UseAPIGateway": "false"
     },
     "Url": {
