Minor change to read initial strarting domain from appsettings

--- a/src/API Gateway/PanacheSoftware.API.Gateway/appsettings.json
+++ b/src/API Gateway/PanacheSoftware.API.Gateway/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "PanacheSoftware": {
+    "StartDomain": "panachesoftware.com",
     "CallMethod": {
       "APICallsSecure": "false",
       "UICallsSecure": "false",
