--- a/src/Web Apps/PanacheSoftware.UI.Client/appsettings.json
+++ b/src/Web Apps/PanacheSoftware.UI.Client/appsettings.json
@@ -11,7 +11,8 @@
     "CallMethod": {
       "APICallsSecure": "false",
       "UICallsSecure": "false",
-      "UseAPIGateway": "false"
+      "UseAPIGateway": "false",
+      "StartDomain": "panachesoftware.com"
     },
     "Url": {
       "IdentityServerURL": "http://localhost:55002",
