--- a/src/Services/PanacheSoftware.Service.File/appsettings.json
+++ b/src/Services/PanacheSoftware.Service.File/appsettings.json
@@ -12,6 +12,7 @@
     "DefaultConnection": "Data Source=localhost;Database=PanacheSoftwareFile;User ID=sa;Password=Passw0rd123!;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "PanacheSoftware": {
+    "StartDomain": "panachesoftware.com",
     "CallMethod": {
       "APICallsSecure": "false",
       "UICallsSecure": "false",
