--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore ./src/PanacheLegalPlatform.sln
     - name: Build
       run: dotnet build ./src/PanacheLegalPlatform.sln --configuration Release --no-restore
     - name: Test
