--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -2,7 +2,7 @@ name: Platform Build
 
 on:
   schedule:
-  - cron: "0 18 * * 1-5"
+  - cron: "25 08 * * 1-5"
 
 jobs:
   build:
@@ -30,6 +30,7 @@ jobs:
         repository: panachesoftware/panachesoftwareuiclient
         tags: latest
         dockerfile: ./src/Web Apps/PanacheSoftware.UI.Client/Dockerfile
+        path: src/Web Apps/PanacheSoftware.UI.Client
     
     - name: Build and push Docker images PanacheSoftware.Identity
       uses: docker/build-push-action@v1.1.0
@@ -38,7 +39,8 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: panachesoftware/panachesoftwareidentity
         tags: latest
-        dockerfile: ./src/Web Apps/PanacheSoftware.Identity/Dockerfile 
+        dockerfile: ./src/Web Apps/PanacheSoftware.Identity/Dockerfile
+        path: src/Web Apps/PanacheSoftware.Identity
     
     - name: Build and push Docker images PanacheSoftware.Service.Client
       uses: docker/build-push-action@v1.1.0
@@ -48,7 +50,8 @@ jobs:
         repository: panachesoftware/panachesoftwareserviceclient
         tags: latest
         dockerfile: ./src/Services/PanacheSoftware.Service.Client/Dockerfile
-        
+        path: src/Services/PanacheSoftware.Service.Client
+            
     - name: Build and push Docker images PanacheSoftware.Service.File
       uses: docker/build-push-action@v1.1.0
       with:
@@ -57,6 +60,7 @@ jobs:
         repository: panachesoftware/panachesoftwareservicefile
         tags: latest
         dockerfile: ./src/Services/PanacheSoftware.Service.File/Dockerfile
+        path: src/Services/PanacheSoftware.Service.File
         
     - name: Build and push Docker images PanacheSoftware.Service.Foundation
       uses: docker/build-push-action@v1.1.0
@@ -66,6 +70,7 @@ jobs:
         repository: panachesoftware/panachesoftwareservicefoundation
         tags: latest
         dockerfile: ./src/Services/PanacheSoftware.Service.Foundation/Dockerfile
+        path: src/Services/PanacheSoftware.Service.Foundation
         
     - name: Build and push Docker images PanacheSoftware.Service.Task
       uses: docker/build-push-action@v1.1.0
@@ -75,6 +80,7 @@ jobs:
         repository: panachesoftware/panachesoftwareservicetask
         tags: latest
         dockerfile: ./src/Services/PanacheSoftware.Service.Task/Dockerfile
+        path: src/Services/PanacheSoftware.Service.Task
         
     - name: Build and push Docker images PanacheSoftware.Service.Team
       uses: docker/build-push-action@v1.1.0
@@ -84,3 +90,4 @@ jobs:
         repository: panachesoftware/panachesoftwareserviceteam
         tags: latest
         dockerfile: ./src/Services/PanacheSoftware.Service.Team/Dockerfile
+        path: src/Services/PanacheSoftware.Service.Team
