--- a/src/API Gateway/PanacheSoftware.API.Gateway/PanacheSoftware.API.Gateway.csproj
+++ b/src/API Gateway/PanacheSoftware.API.Gateway/PanacheSoftware.API.Gateway.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Deterministic>False</Deterministic>
+    <AssemblyVersion>0.1.*</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
