--- a/src/Services/PanacheSoftware.Service.Client/PanacheSoftware.Service.Client.csproj
+++ b/src/Services/PanacheSoftware.Service.Client/PanacheSoftware.Service.Client.csproj
@@ -7,6 +7,10 @@
     <UserSecretsId>168db43f-0912-4103-bcad-fafc3adebba7</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <Deterministic>False</Deterministic>
+    <AssemblyVersion>0.1.*</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.0.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
