--- a/src/Services/PanacheSoftware.Service.File/PanacheSoftware.Service.File.csproj
+++ b/src/Services/PanacheSoftware.Service.File/PanacheSoftware.Service.File.csproj
@@ -6,6 +6,10 @@
     <UserSecretsId>d3c0b531-f35d-4854-933a-6d41c1991209</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <Deterministic>False</Deterministic>
+    <AssemblyVersion>0.1.*</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.0.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
