--- a/src/Services/PanacheSoftware.Service.Foundation/PanacheSoftware.Service.Foundation.csproj
+++ b/src/Services/PanacheSoftware.Service.Foundation/PanacheSoftware.Service.Foundation.csproj
@@ -7,6 +7,10 @@
     <UserSecretsId>341996cc-6ea9-42c2-9c00-e4b2fd7d6e51</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <Deterministic>False</Deterministic>
+    <AssemblyVersion>0.1.*</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.0.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
