--- a/src/Services/PanacheSoftware.Service.Task/PanacheSoftware.Service.Task.csproj
+++ b/src/Services/PanacheSoftware.Service.Task/PanacheSoftware.Service.Task.csproj
@@ -7,6 +7,10 @@
     <UserSecretsId>69d11610-59b3-4ecf-b512-d6efa48ed8df</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <Deterministic>False</Deterministic>
+    <AssemblyVersion>0.1.*</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.0.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
