--- a/src/Services/PanacheSoftware.Service.Team/PanacheSoftware.Service.Team.csproj
+++ b/src/Services/PanacheSoftware.Service.Team/PanacheSoftware.Service.Team.csproj
@@ -7,6 +7,10 @@
     <UserSecretsId>6da6022d-3cb9-4bd6-956d-e099bd11a39c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <Deterministic>False</Deterministic>
+    <AssemblyVersion>0.1.*</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.0.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
