--- a/src/Web Apps/PanacheSoftware.UI.Client/PanacheSoftware.UI.Client.csproj
+++ b/src/Web Apps/PanacheSoftware.UI.Client/PanacheSoftware.UI.Client.csproj
@@ -7,6 +7,10 @@
     <UserSecretsId>adf39f32-bd56-4ec1-8bdc-73fdca4c67b1</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <Deterministic>False</Deterministic>
+    <AssemblyVersion>0.1.*</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
