--- a/src/Web/PanacheSoftware.UI.Core/PanacheSoftware.UI.Core.csproj
+++ b/src/Web/PanacheSoftware.UI.Core/PanacheSoftware.UI.Core.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <StaticWebAssetBasePath Condition="$(StaticWebAssetBasePath) == ''">/ui-core</StaticWebAssetBasePath>
+    <Deterministic>False</Deterministic>
+    <AssemblyVersion>0.1.*</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
