--- a/src/Services/PanacheSoftware.Service.Team/appsettings.json
+++ b/src/Services/PanacheSoftware.Service.Team/appsettings.json
@@ -8,9 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=localhost;Initial Catalog=PanacheSoftware;Database=PanacheSoftware;Integrated Security=True"
-    "MSSQL": "Data Source=localhost;Database=PanacheSoftwareTeam;User ID=sa;Password=Passw0rd123!;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "MySQL": "server=192.168.86.247;port=3306;database=PanacheSoftware.Team;user=pi;password=Passw0rd123!;GuidFormat=Char36" //192.168.86.247
+    "MSSQL": "Data Source=localhost;Database=PanacheSoftware.Team;User ID=sa;Password=Passw0rd123!;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "MySQL": "server=192.168.86.247;port=3306;database=PanacheSoftware.Team;user=pi;password=Passw0rd123!;GuidFormat=Char36"
   },
   "PanacheSoftware": {
     "DBProvider": "MySQL",
