--- a/src/Web Apps/PanacheSoftware.UI.Client/Properties/launchSettings.json
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Properties/launchSettings.json
@@ -10,6 +10,8 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "http://localhost:55001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
